fix alignment of help text on set form

--- a/global_finprint/static/sass/project.scss
+++ b/global_finprint/static/sass/project.scss
@@ -256,4 +256,8 @@ form.set {
   #div_id_tags {
     min-width: 300px;
   }
+
+  small.help-block {
+    margin-left: 15px;
+  }
 }
